[gd_scene load_steps=3 format=3 uid="uid://bvpjl8y7wp1ua"]

[ext_resource type="Script" path="res://src/examples/goal_oriented_action_planning/ui/goap_ui.gd" id="1_oogyq"]
[ext_resource type="Theme" uid="uid://cfctgtdqvwl34" path="res://src/ui/base_ui_theme.tres" id="2_nekpw"]

[node name="GoapUi" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oogyq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_nekpw")

[node name="HungerLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Hunger"

[node name="HungerProgressBar" type="ProgressBar" parent="VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="ReloadButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Reload"

[node name="PauseButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Pause"

[node name="ToggleConsoleButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "Show Console"

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/ToggleConsoleButton" to="." method="_on_toggle_console_button_pressed"]
